# kdapp

./: .codexignore  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  COMMENT_IT_RPC_ASSESSMENT.md  CONTRIBUTING.md  Cargo.toml  DOCS_CLEANUP_PLAN.md  GEMINI.md  README.md  clippy.toml  merchant-proxy.err  merchant-serve.err  merchant-serve.out  tmp_main.txt
PATCHES/: README.md  kaspax_comment_it_rpc_retry.patch
config/: merchant-policy.md
docs/: DETERMINISTIC_SESSION_HANDLE.md  DEV_WEEKLY_SUMMARY.md  FRAMEWORK_PR_DRAFT.md  FRAMEWORK_PR_ROADMAP.md  PROGRAM_ID.md  PROGRAM_ID_AND_CHECKPOINTS.md  codex-tui-workflow.md  fast_path_testing.md  nfc_ble.md  payment_flows.md
examples/comment-board/: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  MASS_LIMIT_SOLUTION.md  NEXT_SESSION_TWEAKS.md  PHASE_1_2_ROADMAP.md  README.md  SESSION_STATUS.md  TIPS_FROM_OPUS.md  broken_session_details.md  history_of_changes.md
examples/comment-board/docs/: README.md  RUNBOOK.md  deepwiki-assessment.md  implementation-roadmap.md  script-descriptor.md  security-analysis.md
examples/comment-board/docs/architecture-decisions/: 001-utxo-locking-approach.md  002-policy-helpers-commons.md
examples/comment-board/src/: comments.rs  main.rs
examples/comment-board/src/cli/: commands.rs  contract_commands.rs  mod.rs  parser.rs
examples/comment-board/src/episode/: board_with_contract.rs  commands.rs  contract.rs  handler.rs  mod.rs
examples/comment-board/src/participant/: auth.rs  commands.rs  init.rs  main_loop.rs  mod.rs
examples/comment-board/src/utils/: mass-diagnostics.rs  mod.rs
examples/comment-board/src/wallet/: kaspa_scripts.rs  mod.rs  utxo_manager.rs  utxo_manager_fix.rs  utxo_manager_fix2.rs
examples/comment-it/: .gitignore  CLAUDE.md  Cargo.toml  DECENTRALIZATION_VISION.md  GEMINI.md  NEXT_SESSION_ARCHITECTURAL_PLAN.md  NEXT_SESSION_TWEAKS.md  OPUS_4_VISION.md  OVERTHINKING.md  PURE_KDAPP_REFACTOR_PLAN.md  README.md  ROOM.md  SESSION_CONCLUSION.md  SESSION_ROADMAP.md  SESSION_SUMMARY.md  SOME_OLD_OPUS_DESIGN.md  TODAY_SESSION.md  TROUBLESHOOTING.md  errors.md  test_session_revocation.sh  test_simple_http_peer.py  test_wallet_persistence.sh
examples/comment-it-indexer/: Cargo.toml
examples/comment-it-indexer/src/: api.rs  listener.rs  main.rs  storage.rs
examples/comment-it/legacy/: .keep  CLAUDE.md  DECENTRALIZATION_VISION.md  GEMINI.md  NEXT_SESSION_ARCHITECTURAL_PLAN.md  OPUS_4_VISION.md  OVERTHINKING.md  PURE_KDAPP_REFACTOR_PLAN.md  ROOM.md  UX_TERMS_AFTER_DEV.md
examples/comment-it/public/: index.html
examples/comment-it/src/: comment.rs  episode_runner.rs  lib.rs  main.rs  organizer.rs  wallet.rs
examples/comment-it/test-peer2/: README.md  start-backend.bat  start-backend.sh
examples/kas-draw/: AIfeedbacks.md  Cargo.toml  EPISODE_CONTRACT_EXAMPLE.md  README.md  offchain_demo.ps1  onchain_demo.ps1  testing.md
examples/kas-draw/src/: cli.rs  episode.rs  handler.rs  main.rs  offchain.rs  offchain_client.rs  routing.rs  submit.rs  tlv.rs  watchtower.rs
examples/kaspa-auth/: .gemini_commit_message.txt  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DAEMON_BLOCKCHAIN_INTEGRATION.md  GEMINI.md  KEYCHAIN.md  KaspaPokerTournament.md  README.md  RUN_COMMANDS_FROM_HERE.md  SOLUTION_SUMMARY.md  Session_1.md  Session_2.md  Session_3.md  Session_4.md  Session_5.md  Session_roadmap.md  TESTING_SUCCESS.md  WebSocket_Pure_P2P_Plan.md  claude-code-implementation-guide.md  test_simple_server.py  websocket-integration-guide.md
examples/kaspa-auth/scripts/: install-first-login-autostart.sh  kaspa-first-login-wizard.sh
examples/kaspa-auth/src/: episode_runner.rs  lib.rs  main.rs  wallet.rs
examples/kdapp-customer/: Cargo.toml  README.md
examples/kdapp-customer/src/: client_sender.rs  episode.rs  main.rs  pki.rs  tlv.rs
examples/kdapp-guardian/: Cargo.toml  README.md  config.toml
examples/kdapp-guardian/src/: handshake_db.rs  keys.rs  lib.rs  main.rs  metrics.rs  service.rs
examples/kdapp-indexer/: Cargo.toml
examples/kdapp-indexer/src/: api.rs  listener.rs  main.rs  models.rs  storage.rs
examples/kdapp-mcp-server/: .gitignore  AI_AGENTS.md  Cargo.toml  Gemini.md  KDAPP_MCP_TOOLS.md  KDAPP_SERVER_USAGE.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  Qwen.md  README.md  ROADMAP.md  STRESS_MODE_PLAN.md  TICTACTOE_AI_GAME.md  generate_agent_keys.py  run_tictactoe_game.bat  run_tictactoe_game.sh  test_move.py  tictactoe_coordinator.py
examples/kdapp-mcp-server/src/: app.rs  jsonrpc.rs  lib.rs  main.rs  node_connector.rs  routing.rs  rpc_handlers.rs  state.rs  tools.rs  wallet.rs
examples/kdapp-merchant/: Cargo.toml  FEEDBACK.md  README.md  onlyKAS-merchant.md
examples/kdapp-merchant/merchant.db/: db  snap.00000000000000A5
examples/kdapp-merchant/src/: client_sender.rs  episode.rs  handler.rs  lib.rs  main.rs  program_id.rs  scheduler.rs  script.rs  server.rs  sim_router.rs  storage.rs  tap.rs  tcp_router.rs  tlv.rs  udp_router.rs  watcher.rs  webhook.rs
examples/kdapp-merchant/tests/: README.md  fixtures.rs  invoice_flow.rs  subscriptions.rs  webhook_tests.rs
examples/kdapp-wallet/: .gitignore  Cargo.toml  GEMINI.md  README.md  USB_SECURITY_IDEAS.md
examples/kdapp-wallet/src/: lib.rs  main.rs
examples/kdapp-wallet/src/cli/: mod.rs
examples/kdapp-wallet/src/wallet/: mod.rs
examples/onlykas-tui/: .env.example  Cargo.toml  README.md  autopilot.ps1  autopilot.sh
examples/onlykas-tui/src/: actions.rs  app.rs  logo.rs  main.rs  models.rs  ui.rs
examples/scripts/: smoke_onlykas.sh
examples/tests/: Cargo.toml  guardian_refund.rs  merchant_reorg.rs  watcher_config.rs
examples/tictactoe/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  support.rs
integration-tests/tests/: engine_flows.rs  generator_flow.rs
kdapp/: Cargo.toml
kdapp/src/: engine.rs  episode.rs  generator.rs  lib.rs  pki.rs  proxy.rs
merchant-live.db/: db  snap.0000000000000193
merchant.db/: db  snap.0000000000000154
scripts/: fastpath.ps1  make_kaspax_patches.ps1  sync_kaspax_from_local_examples.ps1
target-join/: .rustc_info.json
(+136 files in other folders)
