[package]
name = "kas-draw"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
kdapp = { path = "../../kdapp" }
borsh = { version = "1.5.1", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
blake2 = "0.10"
byteorder = "1"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["global-context","rand-std","serde"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
anyhow = "1"
kaspa-consensus-core = { workspace = true }
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-addresses.workspace = true
tokio.workspace = true
faster-hex.workspace = true

[features]
default = []
