[package]
name = "kdapp-guardian"
version = "0.0.1"
edition = "2021"

[dependencies]
kdapp = { path = "../../kdapp" }
borsh = { version = "1.5.1", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
blake2 = "0.10"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-consensus-core = { workspace = true }
secp256k1 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
env_logger = { workspace = true }
serde_json = "1.0"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
rand = { workspace = true }
sha2 = { workspace = true }
ripemd = "0.1"
hex = "0.4"
anyhow = "1.0"
sled = "0.34"

[[bin]]
name = "guardian-service"
path = "src/main.rs"
