[package]
name = "kdapp-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
kdapp = { path = "../../kdapp" }
comment-it = { path = "../comment-it" }
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-addresses = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
bincode = "1.3"
rocksdb = { version = "0.22", optional = true }

[features]
# Default to the lightweight in-memory backend so the indexer can run without
# additional services.
default = ["mem-store"]
# Retain recent episode state in process memory only; ideal for demos/tests.
mem-store = []
# Swap the storage layer for RocksDB to persist data across restarts. Requires
# disabling defaults (`--no-default-features`) when selected.
rocksdb-store = ["rocksdb"]
