[package]
name = "kdapp-mcp-server"
version = "0.1.0"
edition = "2021"
default-run = "kdapp-mcp-server"

[dependencies]
# kdapp crate
kdapp = { path = "../../kdapp" }

# Dependencies from kdapp workspace
kaspa-addresses = { workspace = true }
kaspa-consensus-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-txscript = { workspace = true }
borsh = { workspace = true }
faster-hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "net", "io-std", "io-util"] }

# Additional dependencies for MCP server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
