[package]
name = "kdapp-merchant"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
kdapp = { path = "../../kdapp" }
borsh = { workspace = true }
secp256k1 = { workspace = true }
sha2 = "0.10"
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
blake2 = "0.10"
kaspa-consensus-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-addresses = { workspace = true }
thiserror = { workspace = true }
faster-hex = { workspace = true }
sled = "0.34"
once_cell = "1.19"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
kdapp-guardian = { path = "../kdapp-guardian" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = { workspace = true }
hmac = "0.12"
hex = "0.4"
ctrlc = "3.4"

[dev-dependencies]

[features]
okcp_relay = []
