[package]
name = "onlykas-tui"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
crossterm = "0.27"
ratatui = "0.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
axum = { version = "0.7", features = ["macros", "json"] }
tokio-util = "0.7"
