[package]
name = "examples-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
kdapp = { path = "../../kdapp" }
kdapp-merchant = { path = "../kdapp-merchant" }
kdapp-guardian = { path = "../kdapp-guardian" }
kaspa-consensus-core = { workspace = true }
borsh = { version = "1.5.1", features = ["derive"] }
log = "0.4.25"
secp256k1 = { workspace = true }
tempfile = "3.14.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
hyper = { version = "1", features = ["http1", "client"] }
serde = { workspace = true, features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[test]]
name = "guardian_refund"
path = "guardian_refund.rs"

[[test]]
name = "merchant_reorg"
path = "merchant_reorg.rs"

[[test]]
name = "watcher_config"
path = "watcher_config.rs"
